--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "graphql-tools": "^7.0.5",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.14",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "rand-token": "^1.0.1"
   }
 }
