--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "author": "Jitiendran KS",
     "license": "ISC",
     "devDependencies": {
+        "@babel/cli": "^7.14.5",
         "@babel/core": "^7.14.6",
-        "@babel/node": "^7.14.5",
-        "@babel/preset-env": "^7.14.5"
+        "@babel/node": "^7.14.7",
+        "@babel/preset-env": "^7.14.7"
     },
     "dependencies": {
         "apollo-server-express": "^2.25.1",
